--- a/ZeeSharing/src/styles.css
+++ b/ZeeSharing/src/styles.css
@@ -1,1 +1,13 @@
 /* You can add global styles to this file, and also import other style files */
+:root {
+    --color1: #ffffff;
+    --color2: #000000;
+    --color3: #040D12;
+    --color4: #183D3D;
+    --color5: #5C8374;
+    --color6: #93B1A6;
+}
+*{
+    margin: 0;
+    padding: 0;
+}
