--- a/ZeeSharing/src/app/login/login.component.html
+++ b/ZeeSharing/src/app/login/login.component.html
@@ -12,6 +12,10 @@
       </div>
       <button type="submit">Login</button>
       <p *ngIf="loginError" class="error">{{ loginError }}</p>
+
+      <p class="register-link">
+        New to ZeeSharing? <a (click)="navigateToRegister()">Create an account</a>
+      </p>
     </form>
   </div>
 </div>
