--- a/ZeeSharing/src/app/comps/login/login.component.css
+++ b/ZeeSharing/src/app/comps/login/login.component.css
@@ -20,7 +20,7 @@
     background-color: var(--color3);
     width: 500px;
     max-width: 100%;
-    min-height: 500px;
+    min-height: 550px;
     border-radius: 25px;
     box-shadow: 0 14px 28px rgba(0,0,0,0.25),
         0 0px 10px rgba(0, 0, 0, 0.22);
@@ -30,7 +30,6 @@
 form{
     display: flex;
     align-items: center;
-    justify-content: center;
     flex-direction: column;
     height: 100%;
     text-align: center;
@@ -40,7 +39,8 @@ h1{
     font-weight: 700;
     letter-spacing: -1.5px;
     margin: 0;
-    margin-bottom: 15px;
+    margin-top: 2em;
+    margin-bottom: 1em;
 }
 .form-control{
     width: 75%;
@@ -89,19 +89,18 @@ button{
 button:hover{
     background-color: var(--color5);
 }
-
-
-.register-link {
+.links{
+    position: absolute;
+    bottom: 10px;
+}
+.register-link, .forgot-password-link {
     margin-top: 20px;
 }
-  
-.register-link a {
-    
+.register-link a, .forgot-password-link a{
     color: var(--color4);
     text-decoration: underline;
     cursor: pointer;
 }
-  
-.register-link a:hover {
+.register-link a:hover, .forgot-password-link a:hover {
     color: var(--color5);
 }
