--- a/ZeeSharing/src/app/comps/login/login.component.html
+++ b/ZeeSharing/src/app/comps/login/login.component.html
@@ -10,12 +10,17 @@
         <input type="password" id="password" [(ngModel)]="password" name="password" required placeholder="Password">
         <span></span>
       </div>
-      <button type="submit">Login</button>
-      <p *ngIf="loginError" class="error">{{ loginError }}</p>
-
-      <p class="register-link">
-        New to ZeeSharing? <a (click)="navigateToRegister()">Create an account</a>
+      <p class="forgot-password-link">
+        <a (click)="onForgotPassword()">Forgot Password?</a>
       </p>
+      <p *ngIf="loginError" class="error">{{ loginError }}</p>
+      <div class="links">
+        <button type="submit">Login</button>
+        <p class="register-link">
+          New to ZeeSharing? <a (click)="navigateToRegister()">Create an account</a>
+        </p>
+      </div>
+      
     </form>
   </div>
 </div>
