--- a/ZeeSharing/src/app/comps/register/register.component.html
+++ b/ZeeSharing/src/app/comps/register/register.component.html
@@ -27,12 +27,14 @@
                 <option value="def_user">Default User</option>
             </select>
         </div>
-        <button type="submit">Registration</button>
         <p *ngIf="registerError" class="error">{{ registerError }}</p>
-  
-        <p class="login-link">
-          Already have an account? <a (click)="navigateToLogin()">Log in</a>
-        </p>
+        <div class="links">
+          <button type="submit">Registration</button>
+          <p></p>
+          <p class="login-link">
+            Already have an account? <a (click)="navigateToLogin()">Log in</a>
+          </p>
+        </div>
       </form>
     </div>
   </div>
