--- a/ZeeSharing/src/app/app.component.html
+++ b/ZeeSharing/src/app/app.component.html
@@ -1,2 +1,16 @@
-
+<div class="wrapper">
+    <div class="box">
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+    </div>
+</div>
 <router-outlet />
