--- a/ZeeSharing/src/app/comps/login/login.component.css
+++ b/ZeeSharing/src/app/comps/login/login.component.css
@@ -7,7 +7,7 @@
     --color6: #93B1A6;
 }
 .login-page{
-    background-color: var(--color2);
+    /*background-color: var(--color2);*/
     display: flex;
     justify-content: center;
     align-items: center;
