--- a/ZeeSharing/src/app/comps/dashboard/dashboard.component.css
+++ b/ZeeSharing/src/app/comps/dashboard/dashboard.component.css
@@ -11,8 +11,8 @@
 }
 audio {
     width: 300px;
-    height: 30px; /* Az audio lejátszó magasságának megváltoztatása */
-    margin: 20px auto; /* Középre igazítás */
+    height: 30px;
+    margin: 20px auto;
     display: block;
     background-color: var(--color6);
 }
@@ -23,7 +23,6 @@ audio {
     bottom: 0;
     height: 140px;
     display: flex;
-    border-top: 1px solid white;
 }
 .m_data{
     display: flex;
@@ -36,7 +35,6 @@ audio {
     height: 120px;
     width: 120px;
     object-fit: cover;
-    border: 1px solid white;
 }
 .m_inf{
     height: 100%;
@@ -94,14 +92,17 @@ audio {
     min-width: 30px;
     min-height: 30px;
 }
-fa-icon:hover, #toggle fa-icon:hover, .random fa-icon:hover{
+fa-icon:hover, #toggle fa-icon:hover, .random fa-icon:hover, #tog fa-icon:hover{
     color: var(--color4);
 }
 .icon fa-icon {
-    font-size: 24px; /* Fix ikon méret */
+    font-size: 24px;
 }
 #toggle fa-icon{
     color: var(--color1);
+}
+#tog fa-icon{
+    color: var(--color5);
 }
 .random fa-icon{
     color: gray;
@@ -120,4 +121,227 @@ fa-icon:hover, #toggle fa-icon:hover, .random fa-icon:hover{
 }
 .volumediv button fa-icon:hover{
     color: var(--color1);
+}
+
+/*zene lista*/
+.musics{
+    width: 100%;
+    display: flex;
+    min-height: calc(100vh - 220px);
+    max-height: calc(100vh - 220px);
+    padding-top: 0px;
+}
+.musics .player-lists{
+    width: 35%;
+}
+.musics .player-lists .list, .musics .music-lists .list, .musics .player-lists .playLists, .musics .player-lists .userLists{
+    height: 100%;
+    background-color: var(--color3);
+    border-radius:   0 10px 10px 10px;
+    overflow: scroll;
+}
+body::-webkit-scrollbar{
+    width: 0px;
+}
+.musics .player-lists .list, .musics .player-lists .playLists, .musics .player-lists .userLists{
+    margin: 0 7px 0 14px;
+}
+.musics .music-lists .list{
+    margin: 0 14px 0 7px;
+}
+.musics .music-lists{
+    width: 65%;
+}
+.rows, .upload{
+    padding: 1em;
+}
+/*jelenlegi zenék*/
+.musics .player-lists span{
+    margin-left: 1em;
+}
+.musics .player-lists .list, .musics .player-lists .playLists{
+    padding-top: 1em;
+    overflow-y: scroll;
+}
+.currentList{
+    display: flex;
+    flex-direction: column;
+}
+.currentList .img{
+    width: 100px;
+    height: 100px;
+}
+.currentList .img img{
+    width: 100px;
+    height: 100px;
+}
+.currentList .listItems{
+    margin-top: 1em;
+    padding: 0 1em ;
+}
+.currentList .listItems .item{
+    width: 100%;
+    display: flex;
+    position: relative;
+}
+.currentList .listItems .item .data{
+    padding-left: 1em;
+}
+.currentList .listItems .item:hover{
+    background-color: rgba(24, 61, 61, 0.1);
+    cursor: pointer;
+}
+.playerGIF{
+    position: absolute;
+    width:48px;
+    height:48px;
+    right: 0;
+    top: auto;
+    bottom: auto;
+    color: var(--color1);
+}
+
+/*visulizer */
+.visual {
+    position: absolute;
+    right: 10px;
+    display: flex;
+    gap: 4px;
+    height: 100%;
+    bottom: 0;
+    justify-content: center;
+    align-items: center;
+}
+.visual div {
+    background-color: var(--color1);
+    content: '';
+    width: 8px;
+    border-radius: 2px;
+}
+.visual div:nth-child(1){
+    height: 0px;
+    animation: animate 0.7s linear infinite;
+    animation-delay: 0.2s;
+}
+.visual div:nth-child(2){
+    height: 0px;
+    animation: animate 0.6s linear infinite;
+    animation-delay: 0.4s;
+}
+.visual div:nth-child(3){
+    height: 0px;
+    animation: animate 0.5s linear infinite;
+    animation-delay: 0.3s;
+}
+.visual div:nth-child(4){
+    height: 0px;
+    animation: animate 0.65s linear infinite;
+    animation-delay: 0.3s;
+}
+.visual div:nth-child(5){
+    height: 0px;
+    animation: animate 0.55s linear infinite;
+    animation-delay: 0.4s;
+}
+.playing div:nth-child(1),
+.playing div:nth-child(2),
+.playing div:nth-child(3),
+.playing div:nth-child(4),
+.playing div:nth-child(5){
+    animation-play-state: paused;
+}
+@keyframes animate {
+    0%, 100% {
+        height: 5px;
+    }
+    50% {
+        height: 35px;
+    }
+}
+/*buttons*/
+.menu-buttons{
+    display: flex;
+    width: 100%;
+    padding-top: 20px;
+    max-height: 60px;
+    height: 60px;
+    min-height: 60px;
+}
+.left-buttons{
+    max-height: 60px;
+    height: 60px;
+    min-height: 60px;
+    width: 35%;
+    padding-left: 14px;
+    /*background-color: var(--color4);*/
+}
+.right-buttons{
+    position: relative;
+    width: 65%;
+}
+.logOut{
+    position: absolute;
+    right: 14px;
+}
+.left-buttons button, .right-buttons button{
+    height: 60px;
+    width: 60px;
+    cursor: pointer;
+    font-size: 1.2em;
+}
+.notfocusBtn{
+    border: 3px solid var(--color3);
+    background-color: transparent;
+}
+.focusBtn{
+    border: none;
+    background-color: var(--color3);
+}
+/*playList*/
+.musics .player-lists .playLists span{
+}
+/*playList create*/
+.popup-createPlay{
+    position: fixed;
+    top: 0;
+    left: 0;
+    background-color: rgba(0,0,0,0.9);
+    height: 100%;
+    width: 100%;
+    z-index: 100;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.CreatePlayList{
+    position: relative;
+}
+.popup-createPlay .close-btn{
+    position: absolute;
+    top: 15px;
+    right: 15px;
+    background-color: var(--color3);
+    color: var(--color1);
+    cursor: pointer;
+    border: none;
+    border-radius: 15px;
+    font-size: 1.2em;
+}
+.popup-createPlay .close-btn fa-icon:hover{
+    color: var(--color5);
+}
+#close-crpl{
+    position: absolute;
+    right: 15px;
+    background-color: var(--color3);
+    color: var(--color1);
+    cursor: pointer;
+    border: none;
+    font-size:1em;
+}
+.player-lists .playLists fa-icon:hover{
+    color: var(--color1);
+}
+.player-lists .playLists{
+    position: relative;
 }
