--- a/ZeeSharing/src/app/comps/upload-music/upload-music.component.css
+++ b/ZeeSharing/src/app/comps/upload-music/upload-music.component.css
@@ -15,7 +15,7 @@ h2{
 .avTags{
     margin-top: 5em;
     display: flex;
-    flex-wrap: wrap; /* Ha nem fér ki, új sorba törik */
+    flex-wrap: wrap;
     gap: 8px;
 }
 .avTags button{
