--- a/ZeeSharing/src/app/app.component.css
+++ b/ZeeSharing/src/app/app.component.css
@@ -6,19 +6,21 @@
     --color5: #5C8374;
     --color6: #93B1A6;
 }
-body{
+
+body {
     background-color: var(--color2);
 }
-.wrapper{
+
+.wrapper {
     position: absolute;
     width: 100%;
     height: 100%;
     overflow: hidden;
-    /*background: linear-gradient(90deg, rgba(2,0,.6,1) 0%, rgba(9,9,121,1) 35%, rgba(0,212,255,1) 100%);*/
     background-color: #000000;
     z-index: -1000;
 }
-.box{
+
+.box {
     position: absolute;
     width: 100%;
     height: 100%;
@@ -26,7 +28,8 @@ body{
     filter: blur(3px);
     -webkit-filter: blur(3px);
 }
-.box div{
+
+.box div {
     position: absolute;
     width: 120px;
     height: 120px;
@@ -35,70 +38,89 @@ body{
     mask-image: url('assets/logo.png');
     mask-repeat: no-repeat;
     mask-size: cover;
-    
+
 }
-.box div:nth-child(1){
+
+.box div:nth-child(1) {
     top: 70%;
     left: 67%;
     animation: animate 10s linear infinite;
 }
-.box div:nth-child(2){
+
+.box div:nth-child(2) {
     top: 54%;
     left: 12%;
     animation: animate 10s linear infinite;
 }
-.box div:nth-child(3){
+
+.box div:nth-child(3) {
     top: 1%;
     left: 29%;
     animation: animate 8s linear infinite;
 }
-.box div:nth-child(4){
+
+.box div:nth-child(4) {
     top: 7%;
     left: 69%;
     animation: animate 9s linear infinite;
 }
-.box div:nth-child(5){
+
+.box div:nth-child(5) {
     top: 12%;
     left: 3%;
     animation: animate 11s linear infinite;
 }
-.box div:nth-child(6){
+
+.box div:nth-child(6) {
     top: 51%;
     left: 80%;
     animation: animate 12s linear infinite;
 }
-.box div:nth-child(7){
+
+.box div:nth-child(7) {
     top: 95%;
     left: 40%;
     animation: animate 13s linear infinite;
 }
-.box div:nth-child(8){
+
+.box div:nth-child(8) {
     top: 86%;
     left: 84%;
     animation: animate 10s linear infinite;
 }
-.box div:nth-child(9){
+
+.box div:nth-child(9) {
     top: 62%;
     left: 27%;
     animation: animate 9s linear infinite;
 }
-.box div:nth-child(10){
+
+.box div:nth-child(10) {
     top: 5%;
     left: 95%;
     animation: animate 14s linear infinite;
 }
-.box div:nth-child(11){
+
+.box div:nth-child(11) {
     top: 95%;
     left: 5%;
     animation: animate 14s linear infinite;
 }
-@keyframes animate{
-    0%{
+
+@keyframes animate {
+    0% {
         transform: scale(0) translateY(0) rotate(0);
         opacity: 1;
     }
-    100%{
+
+    100% {
         transform: scale(1.3) translateY(-120px) rotate(360deg);
+        opacity: 0;
+    }
+}
+
+@media only screen and (max-width: 900px) {
+    .box {
         opacity: 0;
     }
 }
