--- a/ZeeSharing/src/app/comps/chat/chat.component.css
+++ b/ZeeSharing/src/app/comps/chat/chat.component.css
@@ -1,158 +1,103 @@
-.chat-container{
-  min-height: 100%;
+h2 {
+  margin-bottom: 1em;
+  cursor: default;
 }
-.chat{
-  min-height: 530px;
-  max-height: 530px;
+
+.chat-container {
+  height: calc(100vh - 330px);
+  position: relative;
+}
+
+.chat {
+  max-height: 100%;
   overflow-y: scroll;
   overflow-x: hidden;
 }
-.chat::-webkit-scrollbar{
+
+.chat::-webkit-scrollbar {
   width: 0;
 }
-h1{
-  width: 100%;
-  border-bottom: 1px solid #183D3D;
-  margin-bottom: 1em;
-}
-.chat .msgs{
+
+.chat .msgs {
   width: 100%;
   display: flex;
   flex-direction: column;
   gap: 1em;
 }
-.me{
+
+.me {
   width: 100%;
   display: flex;
   justify-content: end;
 }
-.them{
+
+.them {
   width: 100%;
   display: flex;
   justify-content: start;
 }
-.me .msg{
+
+.me .msg {
   max-width: 60%;
   text-align: justify;
 }
-.them .msg{
+
+.them .msg {
   max-width: 60%;
   text-align: justify;
 }
-.msg .img img{
+
+.msg .img img {
   width: 35px;
   height: 35px;
   object-fit: cover;
   border-radius: 50%;
 }
-.me .m{
+
+.me .m {
   background-color: #183D3D;
   padding: 1em;
   border-radius: 15px 15px 0px 15px;
 }
-.them .m{
+
+.them .m {
   background-color: #183D3D;
   padding: 1em;
   border-radius: 15px 15px 15px 0px;
 }
-.msg{
+
+.msg {
   display: flex;
   gap: 1em;
   min-height: 50px;
 }
-.img{
+
+.img {
   display: flex;
   flex-direction: column;
   justify-content: end;
 }
-.msgType{
+
+.msgType {
   display: flex;
   flex-direction: column;
 }
-.time{
+
+.time {
   font-size: 15px;
   color: black;
 }
-.me .m .time{
+
+.me .m .time {
   text-align: right;
 }
-.chat-input{
-  padding-top: 2em;
-  width: 100%;
-  position: relative;
-}
-.chat-input input{
-  padding: 1em;
-  border: none;
-  color: #ffffff;
-  padding-left: 1em;
-}
-.chat-input input:focus {
-  outline: none; 
-  border: none;
-}
-.chat-input button{
-  width: 50px;
-  height: 42px;
-  background-color: #183D3D;
-  border: none;
-  cursor: pointer;
-}
-.last{
-  border-radius: 0 10px 10px 0;
-}
-.chat-input fa-icon{
-  color: #ffffff;
-}
-.tyMus{
-  background-color: #183D3D;
-  border-radius: 10px 0 0 10px;
-  width: calc(100% - 150px);
-}
-.se{
-  position: absolute;
-  top: -100px;
-  width: calc(100% - 150px);
-  background-color: rgba(0, 0, 0, 0.9);
-  padding: 1em;
-  border-radius: 10px;
-}
-.seMusc{
-  width: 100%;
-  border-radius: 10px;
-  width: 200px;
-  margin-top: 1em;
-  background-color: transparent;
-  border: 1px solid white;
-}
-.result{
-  background-color: rgba(0, 0, 0, 0.9);
-}
-.music{
-  display: flex;
-  gap: 10px;
-  min-width: 300px;
-}
-.music .msg-img{
-  width: 100px;
-  height: 100px;
-}
-.music .msg-img img{
-  width: 100px;
-  height: 100px;
-  object-fit: cover;
-}
-.music_data{
-  width: 100%;
-}
-.bottom{
+
+.bottom {
   width: 100%;
   text-align: right;
 }
-.music_data .top{
-  height: 66%;
-}
-.bottom button{
+
+.bottom button {
   height: 30px;
   width: 30px;
   background-color: transparent;
@@ -161,9 +106,247 @@ h1{
   cursor: pointer;
   transition: all 0.3s ease;
 }
-.bottom button fa-icon{
+
+.bottom button fa-icon {
   font-size: 30px;
 }
-.bottom button:hover{
+
+.bottom button:hover {
   color: #5C8374;
+}
+
+.chat-input {
+  height: 60px;
+  display: flex;
+  align-items: center;
+  position: relative;
+}
+
+.tyMus {
+  width: calc(100% - 80px);
+  height: 40px;
+  border: none;
+  border-radius: 1em 0 0 1em;
+  padding-left: 1em;
+  background-color: #183D3D;
+  color: #ffffff;
+}
+
+.tyMus:focus {
+  outline: none;
+  border: none;
+}
+
+button {
+  height: 40px;
+  width: 40px;
+  border: none;
+  background-color: #183D3D;
+  color: #ffffff;
+  cursor: pointer;
+  transition: all 0.3s ease;
+}
+
+button:hover {
+  color: #040D12;
+}
+
+.last {
+  border-radius: 0 1em 1em 0;
+}
+
+.se {
+  position: absolute;
+  bottom: 60px;
+  z-index: 100;
+  background-color: rgba(0, 0, 0, 0.9);
+  width: 100%;
+  height: 300px;
+  border-radius: 1em;
+}
+
+.result {
+  height: 240px;
+  padding: 10px;
+  overflow-y: scroll;
+}
+
+.se input {
+  height: 40px;
+}
+
+.result::-webkit-scrollbar {
+  width: 0px;
+}
+
+.se input {
+  width: calc(100% - 15px);
+  background-color: #183D3D;
+  border: none;
+  color: #ffffff;
+  border-radius: 1em;
+  padding-left: 15px;
+}
+
+.se input:focus {
+  outline: none;
+  border: none;
+}
+
+.music {
+  width: 400px;
+  overflow: hidden;
+  display: flex;
+  gap: 10px;
+  position: relative;
+}
+
+.music .msg-img {
+  height: 130px;
+  width: 130px;
+}
+
+.music .msg-img img {
+  height: 130px;
+  width: 130px;
+  object-fit: cover;
+  border-radius: 1em;
+}
+
+.music_data {
+  width: calc(100% - 130px);
+}
+
+.music_data h2 {
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  display: block;
+  margin-bottom: 10px;
+}
+
+.music button {
+  position: absolute;
+  bottom: 5px;
+  right: 5px;
+}
+
+.music button fa-icon {
+  font-size: 30px;
+}
+
+@media only screen and (max-width: 1400px) {
+  .music {
+    width: 350px;
+  }
+}
+
+@media only screen and (max-width: 1200px) {
+  .music {
+    width: 300px;
+  }
+
+  .music h2 {
+    font-size: 1em;
+  }
+}
+
+@media only screen and (max-width: 1060px) {
+  .music {
+    width: 250px;
+  }
+
+  .music .msg-img img,
+  .music .msg-img {
+    height: 100px;
+    width: 100px;
+  }
+
+  .music_data {
+    width: calc(100% - 100px);
+  }
+}
+
+@media only screen and (max-width: 1060px) {
+  .music {
+    width: 210px;
+  }
+}
+
+@media only screen and (max-width: 900px) {
+  .chat-container {
+    height: calc(100vh - 363px);
+  }
+
+  .music {
+    width: 300px;
+  }
+
+  .music .msg-img img,
+  .music .msg-img {
+    height: 100px;
+    width: 100px;
+  }
+
+  .music_data {
+    width: calc(100% - 100px);
+  }
+}
+
+@media only screen and (max-width: 700px) {
+  .music {
+    width: 200px;
+  }
+}
+
+@media only screen and (max-width: 550px) {
+  .chat-container {
+    height: calc(100vh - 363px);
+  }
+
+  .music .msg-img img,
+  .music .msg-img {
+    height: 75px;
+    width: 75px;
+  }
+
+  .music_data {
+    width: calc(100% - 75px);
+  }
+
+  .me .msg {
+    max-width: 90%;
+    text-align: justify;
+  }
+
+  .them .msg {
+    max-width: 90%;
+    text-align: justify;
+  }
+}
+
+@media only screen and (max-width: 375px) {
+  .chat-container {
+    height: calc(100vh - 363px);
+  }
+
+  .music .msg-img img,
+  .music .msg-img {
+    height: 75px;
+    width: 75px;
+  }
+
+  .music_data {
+    width: calc(100% - 75px);
+  }
+
+  .me .msg {
+    max-width: 100%;
+    text-align: justify;
+  }
+
+  .them .msg {
+    max-width: 100%;
+    text-align: justify;
+  }
 }
