--- a/ZeeSharing/src/app/comps/create-play-list/create-play-list.component.html
+++ b/ZeeSharing/src/app/comps/create-play-list/create-play-list.component.html
@@ -1,8 +1,9 @@
 <div class="createPlayList">
     <h1>Create Playlist</h1>
     <form (submit)="newPlayList(); $event.preventDefault()">
-        <input type="text" id="playlistName" [(ngModel)]="playlistName" name="playlistName" required placeholder="Playlist Name">
-        <select name = "playlistType" id="playlistType" [(ngModel)]="playlistType">
+        <input type="text" id="playlistName" [(ngModel)]="playlistName" name="playlistName" required
+            placeholder="Playlist Name">
+        <select name="playlistType" id="playlistType" [(ngModel)]="playlistType">
             <option value="" disabled selected hidden>Playlist Visibility</option>
             <option value="private">Private</option>
             <option value="friends">Friends only</option>
@@ -10,6 +11,4 @@
         </select>
         <button type="submit">Create</button>
     </form>
-
-    <!--<p *ngIf="errorMessage" class="error">{{ errorMessage }}</p>-->
 </div>
