--- a/ZeeSharing/src/app/comps/forum/forum.component.css
+++ b/ZeeSharing/src/app/comps/forum/forum.component.css
@@ -1,115 +1,151 @@
-.forum-container {
-    height: 600px;
-    overflow-y: scroll;
-    overflow-x: hidden;
-    padding: 10px;
-    background-color: transparent;
-    border-radius: 8px;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+h2 {
+  margin-bottom: 1em;
+  cursor: default;
 }
-.forum-post {
-    display: flex;
-    flex-direction: column-reverse;
-    background-color: #183D3D;
-    padding: 15px;
-    margin-bottom: 10px;
-    border-radius: 6px;
-    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
-    color: #ffffff;
-  }
-  
-  .forum-post .post-content {
-    color: #ffffff;
-    margin-bottom: 8px;
-  }
-  
-  .forum-post .post-content span {
-    font-weight: bold;
-    color: #ffffff;
-  }
-  
-  .forum-post .post-content p {
-    font-size: 14px;
-    color: #ffffff;
-  }
-  
-  .forum-post .post-time {
-    text-align: right;
-    font-size: 12px;
-    color: #999;
-    margin-top: 8px;
-  }
-  .loading {
-    text-align: center;
-    padding: 20px;
-    color: #666;
-    font-size: 14px;
-    display: none;
-  }
-  .loading.active {
-    display: block;
-    animation: fadeIn 1s ease-in-out;
-  }
-  .forum-container::-webkit-scrollbar {
-    width: 8px;
-  }
-  
-  .forum-container::-webkit-scrollbar-thumb {
-    background-color: #ccc;
-    border-radius: 4px;
-  }
-  
-  .forum-container::-webkit-scrollbar-thumb:hover {
-    background-color: #aaa;
-  }
 
-  .img{
-    margin-top: 1em;
-    max-height: 500px;
-    max-width: 500px;
+.forum-container {
+  height: calc(100vh - 330px);
+  position: relative;
+}
+
+.forum {
+  max-height: 100%;
+  overflow-y: scroll;
+
+  display: flex;
+  flex-direction: column;
+  gap: 1em;
+}
+
+.forum-post {
+  background-color: #183D3D;
+  padding: 1em;
+  border-radius: 1em;
+  position: relative;
+}
+
+.forum-post .post-content {
+  color: #ffffff;
+  margin-bottom: 8px;
+}
+
+.forum-post .post-content span {
+  font-weight: bold;
+  color: #ffffff;
+  margin-bottom: 1em;
+  display: block;
+  font-size: 1.2em;
+  cursor: default;
+}
+
+.forum-post .post-content p {
+  color: #ffffff;
+  margin-bottom: 1em;
+  cursor: default;
+}
+
+.post-time {
+  position: absolute;
+  right: 20px;
+  bottom: 20px;
+  color: gray;
+  cursor: default;
+}
+
+.admin {
+  position: absolute;
+  right: 20px;
+  top: 20px;
+  transition: all 0.3s ease;
+}
+
+.admin:hover {
+  color: #040D12;
+  cursor: pointer;
+}
+
+.img {
+  margin-top: 1em;
+  max-height: 500px;
+  max-width: 500px;
+}
+
+.img img {
+  max-height: 500px;
+  max-width: 500px;
+  object-fit: cover;
+  border-radius: 1em;
+}
+
+.forum::-webkit-scrollbar {
+  width: 8px;
+}
+
+.forum::-webkit-scrollbar-thumb {
+  background-color: #5C8374;
+  border-radius: 4px;
+}
+
+.forum::-webkit-scrollbar-thumb:hover {
+  background-color: #5C8374;
+}
+
+.inputs {
+  height: 60px;
+  display: flex;
+  align-items: center;
+}
+
+.tyMus {
+  width: calc(100% - 80px);
+  height: 40px;
+  border: none;
+  border-radius: 1em 0 0 1em;
+  padding-left: 1em;
+  background-color: #183D3D;
+  color: #ffffff;
+}
+
+button {
+  height: 40px;
+  width: 40px;
+  border: none;
+  background-color: #183D3D;
+  color: #ffffff;
+  cursor: pointer;
+  transition: all 0.3s ease;
+}
+
+button:hover {
+  color: #040D12;
+}
+
+.tyMus:focus {
+  outline: none;
+  border: none;
+}
+
+.last {
+  border-radius: 0 1em 1em 0;
+}
+
+.loading {
+  z-index: 10;
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+}
+
+@media only screen and (max-width: 900px) {
+  .forum-container {
+    height: calc(100vh - 363px);
   }
-  .img img{
-    max-height: 500px;
-    max-width: 500px;
+}
+
+@media only screen and (max-width: 600px) {
+  .post-time {
+    font-size: 12px;
   }
-  input{
-    background-color: #183D3D;
-    border-radius: 10px 0 0 10px;
-    width: calc(100% - 150px);
-    padding: 1em;
-    border: none;
-    color: #ffffff;
-    padding-left: 1em;
-  }
-  button{
-    width: 50px;
-    height: 42px;
-    background-color: #183D3D;
-    border: none;
-    cursor: pointer;
-    transition: all 0.3s ease;
-  }
-  .last{
-    border-radius: 0 10px 10px 0;
-  }
-  fa-icon{
-    color: #ffffff;
-    transition: all 0.3s ease;
-  }
-  fa-icon:hover{
-    color: #5C8374;
-  }
-  input:focus {
-    outline: none; 
-    border: none;
-  }
-  
-  @keyframes fadeIn {
-    0% {
-      opacity: 0;
-    }
-    100% {
-      opacity: 1;
-    }
-  }
-  
+}
