--- a/ZeeSharing/src/app/comps/recommended-music/recommended-music.component.css
+++ b/ZeeSharing/src/app/comps/recommended-music/recommended-music.component.css
@@ -1,40 +1,79 @@
-:root {
-    --color1: #ffffff;
-    --color2: #000000;
-    --color3: #040D12;
-    --color4: #183D3D;
-    --color5: #5C8374;
-    --color6: #93B1A6;
+* {
+  box-sizing: border-box;
+}
+
+h2 {
+  margin-bottom: 1em;
+  margin-top: 1em;
+}
+
+.row {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 0;
+}
+
+.item {
+  width: 16.66%;
+  padding: 1em;
+  border-radius: 1em;
+  transition: all 0.3s ease;
+}
+
+.square {
+  width: 100%;
+  aspect-ratio: 1 / 1;
+}
+
+.square img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  border-radius: 1em;
+}
+
+.item:hover {
+  background-color: rgba(24, 61, 61, 0.3);
+  cursor: pointer;
+}
+
+.song-info {
+  padding: 1em 0;
+}
+
+.song-name {
+  margin-bottom: 10px;
+  font-weight: bold;
+
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  display: block;
+}
+
+.song-permorfer {
+  color: #183D3D;
+}
+
+@media only screen and (max-width: 1200px) {
+  h2 {
+    font-size: 1.2em;
+    margin-bottom: 0.2em;
   }
-  h2{
-    margin-bottom: 30px;
-    color: var(--color1);
+
+  .item {
+    width: 33.33%;
   }
-  .row{
-    display: flex;
+}
+
+@media only screen and (max-width: 600px) {
+  .item {
+    width: 50%;
   }
-  .row .item{
-    width: 16.6%;
-    padding: 14px;
-  }
-  .square img {
-    position: absolute;
-    top: 0;
-    left: 0;
+}
+
+@media only screen and (max-width: 400px) {
+  .item {
     width: 100%;
-    height: 100%;
-    object-fit: cover;
-    cursor: pointer;
   }
-  .square {
-    width: 100%;
-    position: relative; 
-    padding-top: 100%; 
-    overflow: hidden; 
-  }
-  .song-info{
-    margin-top: 15px;
-  }
-  .song-permorfer{
-    color: var(--color4);
-  }
+}
