--- a/ZeeSharing/src/app/comps/register/register.component.css
+++ b/ZeeSharing/src/app/comps/register/register.component.css
@@ -1,4 +1,4 @@
-.register-page{
+.register-page {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -7,18 +7,20 @@
     height: 100vh;
     color: #ffffff;
 }
-.container{
+
+.container {
     background-color: #040D12;
     width: 500px;
     max-width: 100%;
     min-height: 550px;
     border-radius: 25px;
-    box-shadow: 0 14px 28px rgba(0,0,0,0.25),
+    box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25),
         0 0px 10px rgba(0, 0, 0, 0.22);
-        position: relative;
+    position: relative;
     overflow: hidden;
 }
-form{
+
+form {
     display: flex;
     align-items: center;
     flex-direction: column;
@@ -26,18 +28,21 @@ form{
     text-align: center;
     position: relative;
 }
-h1{
+
+h1 {
     font-weight: 700;
     letter-spacing: -1.5px;
     margin: 0;
     margin-top: 2em;
     margin-bottom: 1em;
 }
-.form-control{
+
+.form-control {
     width: 75%;
     position: relative;
 }
-.form-control span{
+
+.form-control span {
     position: absolute;
     border-bottom: 3px solid #183D3D;
     left: 0;
@@ -45,10 +50,14 @@ h1{
     width: 0%;
     transition: all 0.3s ease;
 }
-.form-control input:focus ~ span{
+
+.form-control input:focus~span {
     width: 100%;
 }
-input[type="email"], input[type="password"], input[type="text"]{
+
+input[type="email"],
+input[type="password"],
+input[type="text"] {
     background-color: #040D12;
     outline: none;
     border: none;
@@ -58,13 +67,15 @@ input[type="email"], input[type="password"], input[type="text"]{
     width: 100%;
     color: #ffffff;
 }
+
 .error {
     color: #93B1A6;
     position: absolute;
     top: 10px;
-    
+
 }
-button{
+
+button {
     border-radius: 20px;
     border: 1px solid #183D3D;
     background-color: #183D3D;
@@ -78,23 +89,26 @@ button{
     width: 230px;
     transition: all 0.3s ease;
 }
-button:hover{
+
+button:hover {
     background-color: #5C8374;
 }
+
 .login-link {
     margin-top: 20px;
 }
-  
+
 .login-link a {
     color: #183D3D;
     text-decoration: underline;
     cursor: pointer;
 }
-  
+
 .login-link a:hover {
     color: #5C8374;
 }
-select{
+
+select {
     width: 100%;
     margin-top: 1em;
     background-color: #040D12;
@@ -102,22 +116,31 @@ select{
     color: #ffffff;
     cursor: pointer;
 }
-.form-control input:focus ~ span{
+
+.form-control input:focus~span {
     width: 100%;
 }
-.links{
+
+.links {
     position: absolute;
     bottom: 10px;
 }
-@media only screen and (max-width: 600px){
-    .container{
+
+@media only screen and (max-width: 600px) {
+    .container {
         background-color: transparent;
         width: 100%;
     }
-    input[type="email"], input[type="password"], input[type="text"], select, option{
+
+    input[type="email"],
+    input[type="password"],
+    input[type="text"],
+    select,
+    option {
         background-color: transparent;
     }
-    option{
+
+    option {
         background-color: #040D12;
     }
 
